--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(etl)
 
-add_executable(cplus main.cpp)
-target_link_libraries(cplus PUBLIC etl)
-target_include_directories(cplus PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-#target_link_options(cplus PUBLIC "-Wl, -nostdlib")
+link_libraries(etl)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+add_executable(procedural_programming procedural_programming.cpp)
